# skills-getting-started-with-github-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  GENAI_SETUP.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  genai_demo.py
src/: README.md  app.py  genai_system_engineering.py
tests/: __init__.py  test_app.py  test_genai_system_engineering.py
